tests/ui/resolve/import_conflicts.sol
import {MyUdvt, MyUdvt as MyUdvt} from "./auxiliary/udvt.sol";
import {MyUdvt as MyUdvt2, MyUdvt as MyUdvt2} from "./auxiliary/udvt.sol";

import "./auxiliary/udvt.sol" as MyUdvt; //~ ERROR: already declared
